--- a/index.html
+++ b/index.html
@@ -13,14 +13,74 @@
             <li>
                 <a href="https://github.com/nginx-lover">nginx modules</a>
                 some nginx modules to add nginx feature
+                <ul>
+                    <li>
+                        <a href="https://github.com/nginx-lover/ngx_http_qrcode_module">ngx_http_qrcode_module</a>
+                        ngx_http_qrcode_module is a an addon for Nginx to generate and serve QR code
+                    </li>
+                    <li>
+                        <a href="https://github.com/nginx-lover/ngx_http_cors_filter">ngx_http_cors_filter</a>
+                        ngx_http_cors_filter_module is a an addon for nginx to dynamic generate cors(Cross-Origin Resource Sharing) 
+                    </li>
+                    <li>
+                        <a href="https://github.com/nginx-lover/ngx_http_updown">ngx_http_updown</a>
+                        ngx_http_updown_module is a an addon for nginx to gracefully up or down
+                    </li>
+                    <li>
+                        <a href="https://github.com/nginx-lover/ngx_http_barcode">ngx_http_barcode</a>
+                        ngx_http_barcode_module is a an addon for nginx to generate barcode
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://github.com/cas-x">CAS</a>
+                center authorization server for enterprise which can support ldap and it have used to integrate gitlab、jira、confluence、jenkins、gerrit, vpn device, phabricator, grafana and so on.
+                <ul>
+                    <li>
+                        <a href="https://github.com/cas-x/cas-server">cas-server</a>
+                        center authorization server
+                    </li>
+                    <li>
+                        <a href="https://github.com/cas-x/cas-ldap">cas-ldap</a>
+                        A component for support ldap protocol integrated with CAS
+                    </li>
+                    <li>
+                        <a href="https://github.com/cas-x/cas-exmailqq">cas-exmailqq</a>
+                        A component for support exmailqq integrated with CAS
+                    </li>
+                    <li>
+                        <a href="https://github.com/cas-x/cas-exwechat">cas-exwechat</a>
+                        A component for support wechat adressbook integrated with CAS
+                    </li>
+                    <li>
+                        <a href="https://github.com/cas-x/cas-nginx_http_auth_module">ngx_http_cas_module</a>
+                        A component for nginx module integrated with CAS
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="https://github.com/detailyang/id-generator">id-generator</a>
                 distributed id generation system fork by redis 3.0.2 which support snowflake objectid serialid and sequence number — Edit
             </li>
             <li>
+                <a href="https://github.com/detailyang/zoneproxy">zoneproxy</a>
+                zoneproxy let you easy to access different network zone (tcpproxy+httpproxy+httpserver+socks5)
+            </li>
+            <li>
                 <a href="">pre-commit-shell</a>
                  pre commit wrapper shellcheck
+            </li>
+            <li>
+                <a href="https://github.com/detailyang/luaproxy">luraproxy(departed)</a>
+                https or http proxy which use lua script to control http traffic 
+            </li>
+            <li>
+                <a href="https://github.com/detailyang/logger">logger(departed)</a>
+                rsyslog logger implemented by golang to support high available log
+            </li>
+            <li>
+                <a href="https://github.com/detailyang/hikarian">hikarian(departed)</a>
+                tcp + tunnel + socks5 or tcp over icmp 
             </li>
         </ul>
         Open Repositories I Contribute To
@@ -48,6 +108,10 @@
             <li>
                 <a href="https://github.com/nodejs/nodejs.org/commits?author=detailyang">nodejs/nodejs.org</a>
                 The Node.js website
+            </li>
+            <li>
+                <a href="https://github.com/haiwen/seafile/commits?author=detailyang">seafile</a>
+                File syncing and sharing software with file encryption and group sharing, emphasis on reliability and high performance. http://seafile.com/
             </li>
         </ul>
     </body>
