--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 zoneproxy let you easy to access different network zone (tcpproxy+httpproxy+httpserver+socks5)
             </li>
             <li>
-                <a href="">pre-commit-shell</a>
+                <a href="https://github.com/detailyang/pre-commit-shell">pre-commit-shell</a>
                  pre commit wrapper shellcheck
             </li>
             <li>
