--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </li>
             <li>
                 <a href="https://github.com/detailyang/id-generator">id-generator</a>
-                distributed id generation system fork by redis 3.0.2 which support snowflake objectid serialid and sequence number — Edit
+                distributed id generation system fork by redis 3.0.2 which support snowflake objectid serialid and sequence number
             </li>
             <li>
                 <a href="https://github.com/detailyang/zoneproxy">zoneproxy</a>
@@ -68,6 +68,10 @@
             <li>
                 <a href="https://github.com/detailyang/pre-commit-shell">pre-commit-shell</a>
                  pre commit wrapper shellcheck
+            </li>
+            <li>
+                <a href="https://github.com/detailyang/wireshark-nsq">wireshark-nsq(departed)</a>
+                 nsq protocol dissector for wireshark
             </li>
             <li>
                 <a href="https://github.com/detailyang/luaproxy">luraproxy(departed)</a>
