--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 distributed id generation system fork by redis 3.0.2 which support snowflake objectid serialid and sequence number
             </li>
             <li>
+                <a href="https://github.com/detailyang/nginx-location-match-visible">nginx-location-match-visible</a>
+                help you to understand how does nginx location match works:)
+            </li>
+            <li>
                 <a href="https://github.com/detailyang/zoneproxy">zoneproxy</a>
                 zoneproxy let you easy to access different network zone (tcpproxy+httpproxy+httpserver+socks5)
             </li>
