--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </li>
             <li>
                 <a href="https://github.com/detailyang/nginx-location-match-visible">nginx-location-match-visible</a>
-                help you to understand how does nginx location match works:)
+                help you understand how does nginx location match works:)
             </li>
             <li>
                 <a href="https://github.com/detailyang/zoneproxy">zoneproxy</a>
