--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </h2>
         <pre>       detailyang - an endless and fucking the boring life engineer</pre>
         <h2><a id="DESCRIPTION" href="#DESCRIPTION"></a>DESCRIPTION  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>       This guy enjoys hack engine.</pre>
+        <pre>       This guy enjoys hack engine</pre>
         <h2><a id="PROJECTS" href="#PROJECTS"></a>PROJECTS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
         <pre>       <a href="https://api.github.com/repos/cas-x/cas-ldap">cas-ldap</a>: A component for support ldap protocol integrated with CAS
        <a href="https://api.github.com/repos/1v2/bootstrap">bootstrap</a>: life bootstrap :smile:
@@ -55,6 +55,30 @@
        <a href="https://api.github.com/repos/cas-x/cas-nginx_http_auth_module">cas-nginx_http_auth_module</a>: A component for nginx http basic auth module integrated with CAS
         </pre>
         <h2><a id="CONTRIBUTES" href="#CONTRIBUTES"></a>CONTRIBUTES  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
+        <pre>       <a href="https://github.com/ant-design/ant-design">ant-design</a>: :ant: One design language
+       <a href="https://github.com/alibaba/tengine">tengine</a>: A distribution of Nginx with some advanced features
+       <a href="https://github.com/haiwen/seafile">seafile</a>: File syncing and sharing software with file encryption and group sharing, emphasis on reliability and high performance. 
+       <a href="https://github.com/foru17/front-end-collect">front-end-collect</a>: 分享自己长期关注的前端开发相关的优秀网站、博客、以及活跃开发者
+       <a href="https://github.com/tj/consolidate.js">consolidate.js</a>: Template engine consolidation library for node.js
+       <a href="https://github.com/fisherman/fisherman">fisherman</a>: A plugin manager for fish http://fisherman.sh
+       <a href="https://github.com/thank-you-github/thank-you-github">thank-you-github</a>: An open letter of gratitude to GitHub
+       <a href="https://github.com/nodejs/nodejs.org">nodejs.org</a>: The Node.js website.
+       <a href="https://github.com/linode/docs">docs</a>: Linode guides and tutorials.
+       <a href="https://github.com/fzzy/radix">radix</a>: Redis client for Go
+       <a href="https://github.com/openresty/test-nginx">test-nginx</a>: Data-driven test scaffold for Nginx C module and OpenResty Lua library development
+       <a href="https://github.com/jeremycx/node-LDAP">node-LDAP</a>: LDAP binding for node.js
+       <a href="https://github.com/soulteary/Get-D2-2014-Ticket">Get-D2-2014-Ticket</a>: Get D2 2014 Ticket - Designer & Developer Frontend Technology Forum
+       <a href="https://github.com/gnuhpc/All-About-Redis">All-About-Redis</a>: None
+       <a href="https://github.com/1v2/bootstrap">bootstrap</a>: life bootstrap :smile:
+       <a href="https://github.com/1v2/logo">logo</a>: 1v2 logo
+       <a href="https://github.com/chenyangdo/webfront">webfront</a>: 前端知识天地
+       <a href="https://github.com/cloudcopy/seafile">seafile</a>: None
+       <a href="https://github.com/eladiomejutogracia/tech-cheatsheet">tech-cheatsheet</a>: None
+       <a href="https://github.com/golang-mirrors/radix">radix</a>: Mirror of github.com/fzzy/radix
+       <a href="https://github.com/jkhowland/static-landing">static-landing</a>: The landing page for Static Buildup
+       <a href="https://github.com/koa-grace/grace-consolidate">grace-consolidate</a>: None
+       <a href="https://github.com/zhangfengbing/front-end">front-end</a>: 转载
+        </pre>
         <h2><a id="COLOPHON" href="#COLOPHON"></a>COLOPHON  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
         <pre>       This page is part of release 0.1.0 of the detailyang project.
         <br/>       <span class="footline">detailyang(4)                            1993-06-01                        detailyang(4)</span>
