--- a/index.html
+++ b/index.html
@@ -40,19 +40,69 @@
         <h2><a id="DESCRIPTION" href="#DESCRIPTION"></a>DESCRIPTION  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
         <pre>       This guy enjoys hack engine</pre>
         <h2><a id="PROJECTS" href="#PROJECTS"></a>PROJECTS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
-        <pre>       <a href="https://api.github.com/repos/cas-x/cas-ldap">cas-ldap</a>: A component for support ldap protocol integrated with CAS
-       <a href="https://api.github.com/repos/1v2/bootstrap">bootstrap</a>: life bootstrap :smile:
-       <a href="https://api.github.com/repos/cas-x/cas-doc">cas-doc</a>: None
-       <a href="https://api.github.com/repos/cas-x/cas-exmailqq">cas-exmailqq</a>: A component for support exmailqq integrated with CAS
-       <a href="https://api.github.com/repos/cas-x/cas-exwechat">cas-exwechat</a>: A component for support wechat adressbook integrated with CAS
-       <a href="https://api.github.com/repos/cas-x/cas-gitlab">cas-gitlab</a>: A component for support gitlab-ce integrated with CAS 
-       <a href="https://api.github.com/repos/1v2/logo">logo</a>: 1v2 logo
-       <a href="https://api.github.com/repos/cas-x/cas-logo">cas-logo</a>: cas logo
-       <a href="https://api.github.com/repos/cas-x/cas-ssh-auth-server">cas-ssh-auth-server</a>: A component for support sshd auth integrated with CAS
-       <a href="https://api.github.com/repos/cas-x/cas-nginx_http_ssl_auth_module">cas-nginx_http_ssl_auth_module</a>: A component for nginx http auth for ssl client module integrated with CAS
-       <a href="https://api.github.com/repos/cas-x/lua-resty-cas">lua-resty-cas</a>: A component for nginx access phase module integrated with CAS
-       <a href="https://api.github.com/repos/cas-x/cas-server">cas-server</a>: :beers:  center authorization server for enterprise
-       <a href="https://api.github.com/repos/cas-x/cas-nginx_http_auth_module">cas-nginx_http_auth_module</a>: A component for nginx http basic auth module integrated with CAS
+        <pre>       <a href="https://github.com/detailyang/awesome-cheatsheet">awesome-cheatsheet</a>: :beers: awesome cheatsheet
+       <a href="https://github.com/nodejs/nodejs.org-archive">nodejs.org-archive</a>: [DEPRECATED] Website repository for the Node.js project
+       <a href="https://github.com/detailyang/cas-server">cas-server</a>: :beers:  center authorization server for enterprise
+       <a href="https://github.com/detailyang/id-generator">id-generator</a>: :beers: distributed id generation system fork by redis 3.0.2  which support snowflake objectid serialid and sequence number
+       <a href="https://github.com/x-v8/ngx_http_cors_filter">ngx_http_cors_filter</a>: :beers: ngx_http_cors_filter_module is a an addon for nginx to dynamic generate cors(Cross-Origin Resource Sharing)
+       <a href="https://github.com/x-v8/ngx_http_qrcode_module">ngx_http_qrcode_module</a>: :beers: ngx_http_qrcode_module is a an addon for Nginx to generate and serve QR code.(nginx qrcode module)
+       <a href="https://github.com/detailyang/wireshark-nsq">wireshark-nsq</a>: :beers: nsq protocol dissector for wireshark
+       <a href="https://github.com/detailyang/nginx-location-match-visible">nginx-location-match-visible</a>: :beers: help you understand how does nginx location match works:)
+       <a href="https://github.com/detailyang/ngx_http_barcode">ngx_http_barcode</a>: :beers: ngx_http_barcode_module is a an addon for nginx to generate barcode
+       <a href="https://github.com/detailyang/ngx_http_updown">ngx_http_updown</a>: :beers: ngx_http_updown_module is a an addon for nginx to gracefully up or down
+       <a href="https://github.com/detailyang/awesome-wireshark-dissector">awesome-wireshark-dissector</a>: A curated list of awesome wireshark dissector. Inspired by awesome awesomeness
+       <a href="https://github.com/cas-x/cas-server">cas-server</a>: :beers:  center authorization server for enterprise
+       <a href="https://github.com/x-v8/ngx_http_reqstat_module">ngx_http_reqstat_module</a>: compate tengine ngx_http_reqstat_module to nginx
+       <a href="https://github.com/cas-x/cas-nginx_http_auth_module">cas-nginx_http_auth_module</a>: A component for nginx http basic auth module integrated with CAS
+       <a href="https://github.com/detailyang/lua-resty-cors">lua-resty-cors</a>: It's the implement of CORS on OpenResty 
+       <a href="https://github.com/detailyang/bifrost">bifrost</a>: copy ngrok with node.js
+       <a href="https://github.com/detailyang/blog">blog</a>: :(
+       <a href="https://github.com/detailyang/cas-doc">cas-doc</a>: move to https://github.com/cas-x
+       <a href="https://github.com/detailyang/cas-exmailqq">cas-exmailqq</a>: A component for support exmailqq integrated with CAS
+       <a href="https://github.com/detailyang/cas-exwechat">cas-exwechat</a>: A component for support wechat adressbook integrated with CAS
+       <a href="https://github.com/detailyang/cas-gitlab">cas-gitlab</a>: A component for support gitlab-ce integrated with CAS 
+       <a href="https://github.com/detailyang/cas-ldap">cas-ldap</a>: A component for support ldap protocol integrated with CAS
+       <a href="https://github.com/detailyang/cas-nginx_http_auth_module">cas-nginx_http_auth_module</a>: A component for nginx module integrated with CAS
+       <a href="https://github.com/cas-x/cas-gitlab">cas-gitlab</a>: A component for support gitlab-ce integrated with CAS 
+       <a href="https://github.com/detailyang/dayofstap">dayofstap</a>: learn systemtap day by day
+       <a href="https://github.com/detailyang/detailyang.github.io">detailyang.github.io</a>: find $(whoami) https://detailyang.github.io
+       <a href="https://github.com/detailyang/esl">esl</a>: eve shell options parser for eva-shell
+       <a href="https://github.com/detailyang/hikarian">hikarian</a>: hikarian (departed) tcp + tunnel or tcp over icmp
+       <a href="https://github.com/cas-x/cas-ldap">cas-ldap</a>: A component for support ldap protocol integrated with CAS
+       <a href="https://github.com/detailyang/learn">learn</a>: None
+       <a href="https://github.com/detailyang/logger">logger</a>: logger: golang implements
+       <a href="https://github.com/1v2/logo">logo</a>: 1v2 logo
+       <a href="https://github.com/detailyang/lua-resty-socks5-server">lua-resty-socks5-server</a>: This is an implementation of the SOCKS v5 server in the OpenResty
+       <a href="https://github.com/detailyang/luaproxy">luaproxy</a>: https or http proxy which use lua script to control http traffic
+       <a href="https://github.com/detailyang/ncp">ncp</a>: nginx configure parser
+       <a href="https://github.com/cas-x/cas-logo">cas-logo</a>: cas logo
+       <a href="https://github.com/1v2/bootstrap">bootstrap</a>: life bootstrap :smile:
+       <a href="https://github.com/detailyang/ngx_http_cors_filter">ngx_http_cors_filter</a>: :beers: ngx_http_cors_filter_module is a an addon for nginx to dynamic generate cors(Cross-Origin Resource Sharing)
+       <a href="https://github.com/cas-x/cas-nginx_http_ssl_auth_module">cas-nginx_http_ssl_auth_module</a>: A component for nginx http auth for ssl client module integrated with CAS
+       <a href="https://github.com/detailyang/pix">pix</a>: CSS pixel art generator
+       <a href="https://github.com/detailyang/pre-commit-shell">pre-commit-shell</a>: :beers: pre commit wrapper shellcheck
+       <a href="https://github.com/detailyang/repo">repo</a>: catch you github nonforked repository
+       <a href="https://github.com/detailyang/systemtap-toolkit">systemtap-toolkit</a>: my systemtap toolkit to online analyze on production
+       <a href="https://github.com/detailyang/tsar-bkb">tsar-bkb</a>: tsar bkb component for bkb:)
+       <a href="https://github.com/cas-x/cas-doc">cas-doc</a>: cas api doc
+       <a href="https://github.com/detailyang/ybw">ybw</a>: public personal tools
+       <a href="https://github.com/detailyang/zoneproxy">zoneproxy</a>: zoneproxy let you easy to access different network zone
+       <a href="https://github.com/cas-x/cas-ssh-auth-server">cas-ssh-auth-server</a>: A component for support sshd auth integrated with CAS
+       <a href="https://github.com/x-v8/bkb">bkb</a>: [WIP]
+       <a href="https://github.com/x-v8/generator-nginx-http-module">generator-nginx-http-module</a>: yeoman for generator-nginx-http-module
+       <a href="https://github.com/x-v8/nginx-faq">nginx-faq</a>: nginx faq
+       <a href="https://github.com/x-v8/nginx-xmind">nginx-xmind</a>: :rocket: make notes on xmind about nginx :rocket: https://x-v8.github.io/nginx-xmind/
+       <a href="https://github.com/x-v8/ngx-http-stub-status-rt">ngx-http-stub-status-rt</a>: backport tengine http-stub-status response time to nginx which can easily monitor response time
+       <a href="https://github.com/x-v8/ngx-insides">ngx-insides</a>: ngx-insides
+       <a href="https://github.com/x-v8/ngx_http_auth_file_module">ngx_http_auth_file_module</a>: ngx_http_auth_file_module is a an addon to nginx for authenticated by file
+       <a href="https://github.com/x-v8/ngx_http_barcode">ngx_http_barcode</a>: :beers: ngx_http_barcode_module is a an addon for nginx to generate barcode
+       <a href="https://github.com/cas-x/lua-resty-cas">lua-resty-cas</a>: A component for nginx access phase module integrated with CAS
+       <a href="https://github.com/x-v8/ngx_http_fproxy_module">ngx_http_fproxy_module</a>: :beers: ngx_http_fproxy_module  is a an addon for nginx to forward proxy
+       <a href="https://github.com/cas-x/cas-exmailqq">cas-exmailqq</a>: A component for support exmailqq integrated with CAS
+       <a href="https://github.com/x-v8/ngx_http_redis_cluster_module">ngx_http_redis_cluster_module</a>: [WIP] ngx_http_redis_cluster_module is a an addon for nginx to proxy redis cluster
+       <a href="https://github.com/cas-x/cas-exwechat">cas-exwechat</a>: A component for support wechat adressbook integrated with CAS
+       <a href="https://github.com/x-v8/ngx_http_universal_auth_module">ngx_http_universal_auth_module</a>: None
+       <a href="https://github.com/x-v8/ngx_http_updown">ngx_http_updown</a>: :beers: ngx_http_updown_module is a an addon for nginx to gracefully up or down
         </pre>
         <h2><a id="CONTRIBUTES" href="#CONTRIBUTES"></a>CONTRIBUTES  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
         <pre>       <a href="https://github.com/ant-design/ant-design">ant-design</a>: :ant: One design language
