--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <pre>       detailyang - an endless and fucking the boring life engineer</pre>
         <h2><a id="DESCRIPTION" href="#DESCRIPTION"></a>DESCRIPTION  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
         <pre>       This guy enjoys hack engine</pre>
+        <h2><a id="TALKS" href="#TALKS"></a>TALKS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
+        <pre>    <a href="http://www.slideshare.net/yangbingwu/a-little-waf">A Little WAF</a>
+    <a href="http://www.slideshare.net/yangbingwu/a-little-nginx">A Little Nginx</a></pre>
         <h2><a id="PROJECTS" href="#PROJECTS"></a>PROJECTS  &nbsp; &nbsp; &nbsp; &nbsp; <a href="#top_of_page"><span class="top-link">top</span></a></h2>
         <pre>       <a href="https://github.com/detailyang/awesome-cheatsheet">awesome-cheatsheet</a>: :beers: awesome cheatsheet
        <a href="https://github.com/nodejs/nodejs.org-archive">nodejs.org-archive</a>: [DEPRECATED] Website repository for the Node.js project
